______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.166:

* XINS/Java Common Library:
  - Added class function getContext() to class LogCentral. This class function
    returns the current diagnostic context identifier.
  - Removed org.xins.specs package, since it is not used.

* XINS/Java Server Framework:
  - Renamed parameter 'id' to 'sessionID' in log message 5010.

* Logdoc:
  - Parameters cannot be called 'id'.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.165:

* XINS/Java Server Framework:
  - Changed the following log messages so they log the actual exception in a
    DEBUG message directly following the original log message (normally
    WARNING, ERROR or FATAL): 2004, 2007, 2012, 2024, 2032, 3001, 3002, 3003,
    4001, 4016, 4024, 4030, 5013, 6001, 6007 and 6011.

* XINS/Java Common Library:
  - Fixed @see tag in LogCentral class.
  - Changed SingleEntryMap class, so that the put() method throws an exception
    if the new key does not match the old key.

* Generated specification documentation:
  - Added the freeze parameter in the api.dtd.
  - Added new possible parameters in the function.dtd.

* Logdoc:
  - Added a note to the generated Logdoc index page, about deciding whether a
    log message should be at the FATAL message.
  - Added support for exceptions. These are always logged at DEBUG level.

* Generated build file:
  - Moved most of the command executed in the xins script shell files
    to a new make-build.xml ANT script file.
  - The build.xml is now recreated only if some files has been modified.
  - The targets create-project, create-function, create-type and create-rcd
    has been added to create a new project, a new function, a new type or
    a new result code.
  - The types are now regenerated only if a file has changed.
  - Added a new rebuild-<api> that executes a clean before building the
    project.
