@@ -1,6 +1,0 @@
-<html>
-<body>Security-related tools.
-
-@since XINS 0.127
-</body>
-</html>
