@@ -4,7 +4,9 @@ CHANGES INTRODUCED IN XINS 0.166:
 * XINS/Java Common Library:
   - Added class function getContext() to class LogCentral. This class function
     returns the current diagnostic context identifier.
-  - Removed org.xins.specs package, since it is not used.
+  - Removed the following unused packages:
+    . org.xins.specs
+    . org.xins.tools.security
 
 * XINS/Java Server Framework:
   - Renamed parameter 'id' to 'sessionID' in log message 5010.
